# taggingai

./: .env.example  .funcignore  .gitignore  .vercelignore  README.md  app.py  function_app.py  gemini_content.py  host.json  image_utils.py  name_description_validator.py  pyproject.toml  request_parser.py  requirements.txt
api/: asset_analysis.py  index.py
prompts/: __init__.py  _loader.py  constants.py  helpers.py  name_description_match.py  phase1_vision.py  phase2_subcat_model.py
prompts/templates/: name_description_match.txt  phase1_vision.txt  phase2_subcat_model.txt
tests/: conftest.py  test_function_utils.py  test_gemini_content.py  test_helpers.py  test_image_utils.py  test_name_description_validator.py  test_prompts.py  test_request_parser.py
