[project]
name = "taggingai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "azure-functions==1.18.0",
    "pillow==10.4.0",
    "google-generativeai==0.3.2",
    "fastapi==0.115.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:google.generativeai",
]

[tool.coverage.run]
source = ["function_app", "prompts", "image_utils", "request_parser", "gemini_content"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = [".", "tests"]
extend-exclude = [".venv", ".python_packages"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled pragmatically in legacy monolith
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
